--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -103,10 +103,11 @@
             {{warrant.together_with}} 
           {% elif warrant.other %}
             {{ warrant.other }}
-          {% elif warrant.personal_type %}
-            {{warrant.personal_type }}  <br />
-            {{warrant.personal_brand}} <br />
-            {{warrant.personal_registration}}
+          {% elif warrant.personal_vehicle_id %}
+            {{ warrant.travelwarrant_personal.vehicle_ownership }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_type }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_registration }}
           {% else %} 
             {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
             {{warrant.travelwarrant_vehicle.vehicle_brand}} <br />
@@ -160,10 +161,11 @@
             {{warrant.together_with}} 
           {% elif warrant.other %}
             {{ warrant.other }}
-          {% elif warrant.personal_type %}
-            {{warrant.personal_type }}  <br />
-            {{warrant.personal_brand}} <br />
-            {{warrant.personal_registration}}
+          {% elif warrant.personal_vehicle_id %}
+            {{ warrant.travelwarrant_personal.vehicle_ownership }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_type }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_registration }}
           {% else %} 
             {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
             {{warrant.travelwarrant_vehicle.vehicle_brand}} <br />
@@ -186,8 +188,8 @@
       </tr>
     </thead>
     <tbody>
-      {% for warrant in warrants %} {% if current_user.id ==
-      warrant.travelwarrant_user.id %}
+      {% for warrant in warrants %} 
+      {% if current_user.id == warrant.travelwarrant_user.id %}
       <tr>
         <td class="align-middle">
           <div class="btn-group">
@@ -206,8 +208,7 @@
           </div>
         </td>
         <td class="align-middle">
-          {{ warrant.travelwarrant_user.name }} {{
-          warrant.travelwarrant_user.surname}}
+          {{ warrant.travelwarrant_user.name }} {{ warrant.travelwarrant_user.surname}}
         </td>
         <td class="align-middle">
           {% if warrant.together_with %} 
@@ -215,14 +216,15 @@
             {{warrant.together_with}} 
           {% elif warrant.other %}
             {{ warrant.other }}
-          {% elif warrant.personal_type %}
-            {{warrant.personal_type }}  <br />
-            {{warrant.personal_brand}} <br />
-            {{warrant.personal_registration}}
-          {% else %} 
-            {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
-            {{warrant.travelwarrant_vehicle.vehicle_brand}} <br />
-            {{warrant.travelwarrant_vehicle.vehicle_registration}}
+          {% elif warrant.personal_vehicle_id %}
+            {{ warrant.travelwarrant_personal.vehicle_ownership }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_type }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_registration }}
+          {% else %}
+            {{ warrant.travelwarrant_vehicle.vehicle_type }} <br />
+            {{ warrant.travelwarrant_vehicle.vehicle_brand }} <br />
+            {{ warrant.travelwarrant_vehicle.vehicle_registration }}
           {% endif %}
         </td>
         <td class="align-middle">{{ warrant.start_datetime.date() }}</td>
