--- a/putninalozi/templates/travel_warrant_user.html
+++ b/putninalozi/templates/travel_warrant_user.html
@@ -5,6 +5,8 @@
     {{ form.hidden_tag() }}
     <fieldset class="form-group">
       <legend class="border-bottom mb-4">{{ legend }}</legend>
+      <legend class=""> Zaposleni: <input type="text" class="form-control form-control-lg" value="{{ warrant.travelwarrant_user.name }}  {{ warrant.travelwarrant_user.surname }}" disabled></legend>
+      <legend class="border-bottom mb-4"> <input class="form-control form-control-lg" type="datetime-local", value="{{ warrant.start_datetime }}" disabled></legend>
       {% if form.errors %}
       debag line: {{ form.errors }}
       {% endif %}
@@ -13,7 +15,7 @@
           <div class="accordion-item">
             <div class="accordion-header" id="headingZero">
               <button type="button" class="accordion-button" data-toggle="collapse" data-target="#collapseZero" aria-expanded="false" aria-controls="collapseZero">
-                <h2>Broj putnog naloga: {{ warrant.travel_warrant_number }}</h2>
+                <h3><strong>Broj putnog naloga: {{ warrant.travel_warrant_number }}</strong></h3>
               </button>
             </div>
 
@@ -142,14 +144,14 @@
           <div class="col form-box">
             {{ form.end_datetime.label(class="form-control-label") }}
               {% if form.end_datetime.errors %}
-                  {{ form.end_datetime(class="form-control form-control-lg is-invalid") }}
+                  {{ form.end_datetime(class="form-control form-control-lg is-invalid", min=warrant.start_datetime) }}
                   <div class="invalid-feedback">
                       {% for error in form.end_datetime.errors %}
                           <span>{{ error }}</span>
                       {% endfor %}
                   </div>
               {% else %}
-                  {{ form.end_datetime(class="form-control form-control-lg", type="datetime-local") }}
+                  {{ form.end_datetime(class="form-control form-control-lg", type="datetime-local", min=warrant.start_datetime) }}
               {% endif %}
           </div>
         </div>
