v 0.346 abroad field dates required, min-max...

--- a/putninalozi/templates/register_tw.html
+++ b/putninalozi/templates/register_tw.html
@@ -342,7 +342,7 @@
     myFunction();
   };
 
-  // window.alert(booleanValue);
+  // window.(booleanValue);
   function myFunction() {
     booleanValue = !booleanValue;
     // window.alert(booleanValue);
