--- a/putninalozi/templates/travel_warrant.html
+++ b/putninalozi/templates/travel_warrant.html
@@ -542,6 +542,8 @@
     });
   });
   var booleanValue = '{{form.abroad.data}}';
+  const inputContryLeaving = $('#contry_leaving');
+  const inputContryReturn = $('#contry_return');
   // window.alert(booleanValue);
   if (booleanValue === 'True') {
     booleanValue = false;
@@ -559,8 +561,18 @@
     var x = document.getElementById("collapseAbrod");
     if (booleanValue === true) {
       x.style.display = "block";
+      inputContryLeaving.attr('required', true);
+      inputContryLeaving.attr('min', $('#start_datetime').val());
+      inputContryLeaving.attr('max', $('#end_datetime').val());
+      inputContryReturn.attr('required', true);
+      inputContryReturn.attr('min', $('#start_datetime').val());
+      inputContryReturn.attr('max', $('#end_datetime').val());
     } else {
       x.style.display = "none";
+      inputContryLeaving.attr('required', false);
+      inputContryReturn.attr('required', false);
+      inputContryLeaving.val('');
+      inputContryReturn.val('');
     }
   }
 </script>
