--- a/putninalozi/templates/home.html
+++ b/putninalozi/templates/home.html
@@ -37,6 +37,7 @@
     {% endif %}
   </tbody>
 </table>
+<h2>O softveru:</h2>
 <p class="emphasized">putninalozi.online je softver koji omoguća izradu, evidenciju i štampu putnih naloga za službena putovanja u zemlji i inostranstvu. On omogućava umrežavanje korisnika koji zajednički mogu da rade na generisanju, popunjavanju i knjiženju putnih naloga. Softver je razvio Studio Implicit, firma sa bogatim iskustvom u razvoju poslovnih rešenja.</p>
 <br>
 <div class="content-section">
