--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -27,9 +27,9 @@
   {% elif current_user.authorization in ['c_admin', 'c_principal', 'c_founder'] %}
     <thead>
       <tr>
-        <th>Tip Vozila</th>
+        <th>Tip vozila</th>
         <th>Marka vozila</th>
-        <th>Registracija</th>
+        <th>Registraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznaka</th>
       </tr>
     </thead>
     <tbody>
