--- a/putninalozi/templates/vehicle_list.html
+++ b/putninalozi/templates/vehicle_list.html
@@ -29,7 +29,7 @@
       <tr>
         <th>Tip vozila</th>
         <th>Marka vozila</th>
-        <th>Registraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznakaRegistraciona oznaka</th>
+        <th>Registraciona oznaka</th>
       </tr>
     </thead>
     <tbody>
