--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -161,13 +161,12 @@
           {% elif warrant.other %}
             {{ warrant.other }}
           {% elif warrant.personal_vehicle_id %}
-            {{ warrant.travelwarrant_personal.vehicle_ownership }} <br />
             {{ warrant.travelwarrant_personal.vehicle_type }} <br />
-            {{ warrant.travelwarrant_personal.vehicle_brand }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/p.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
             {{ warrant.travelwarrant_personal.vehicle_registration }}
           {% else %} 
             {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
-            {{warrant.travelwarrant_vehicle.vehicle_brand}} <br />
+            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/s.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
             {{warrant.travelwarrant_vehicle.vehicle_registration}}
           {% endif %}
         </td>
@@ -216,14 +215,13 @@
           {% elif warrant.other %}
             {{ warrant.other }}
           {% elif warrant.personal_vehicle_id %}
-            {{ warrant.travelwarrant_personal.vehicle_ownership }} <br />
             {{ warrant.travelwarrant_personal.vehicle_type }} <br />
-            {{ warrant.travelwarrant_personal.vehicle_brand }} <br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/p.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
             {{ warrant.travelwarrant_personal.vehicle_registration }}
-          {% else %}
-            {{ warrant.travelwarrant_vehicle.vehicle_type }} <br />
-            {{ warrant.travelwarrant_vehicle.vehicle_brand }} <br />
-            {{ warrant.travelwarrant_vehicle.vehicle_registration }}
+          {% else %} 
+            {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
+            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/s.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
+            {{warrant.travelwarrant_vehicle.vehicle_registration}}
           {% endif %}
         </td>
         <td class="align-middle">{{ warrant.start_datetime.date() }}</td>
