--- a/putninalozi/templates/travel_warrant_list.html
+++ b/putninalozi/templates/travel_warrant_list.html
@@ -105,11 +105,11 @@
             {{ warrant.other }}
           {% elif warrant.personal_vehicle_id %}
             {{ warrant.travelwarrant_personal.vehicle_type }} <br />
-            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/p.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/P.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
             {{ warrant.travelwarrant_personal.vehicle_registration }}
           {% else %} 
             {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
-            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/s.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
+            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/S.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
             {{warrant.travelwarrant_vehicle.vehicle_registration}}
           {% endif %}
         </td>
@@ -162,11 +162,11 @@
             {{ warrant.other }}
           {% elif warrant.personal_vehicle_id %}
             {{ warrant.travelwarrant_personal.vehicle_type }} <br />
-            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/p.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/P.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
             {{ warrant.travelwarrant_personal.vehicle_registration }}
           {% else %} 
             {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
-            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/s.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
+            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/S.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
             {{warrant.travelwarrant_vehicle.vehicle_registration}}
           {% endif %}
         </td>
@@ -216,11 +216,11 @@
             {{ warrant.other }}
           {% elif warrant.personal_vehicle_id %}
             {{ warrant.travelwarrant_personal.vehicle_type }} <br />
-            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/p.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
+            {{ warrant.travelwarrant_personal.vehicle_brand }} <span title="Privatno vozilo"><img src="static/img/P.png" alt="(P)" style="width: 16px; height: 16px;"></span><br />
             {{ warrant.travelwarrant_personal.vehicle_registration }}
           {% else %} 
             {{ warrant.travelwarrant_vehicle.vehicle_type}} <br />
-            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/s.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
+            {{warrant.travelwarrant_vehicle.vehicle_brand}} <span title="Službeno vozilo"><img src="static/img/S.png" alt="(S)" style="width: 16px; height: 16px;"></span><br />
             {{warrant.travelwarrant_vehicle.vehicle_registration}}
           {% endif %}
         </td>
